[package]
name = "cyphera"
version = "0.0.1-alpha.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cyphera-labs/cyphera-rust"
homepage = "https://cyphera.io"
authors = ["Leslie Gutschow <leslie.gutschow@horizondigital.dev>"]
description = "Data protection SDK — format-preserving encryption (FF1/FF3), AES-GCM, data masking, and hashing. Zero-copy passthrough preservation. Policy-driven. Cross-language compatible."
keywords = ["encryption", "fpe", "format-preserving", "data-protection", "masking"]
categories = ["cryptography", "encoding"]

[dependencies]
aes = "0.9"
ctr = "0.9"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
# keychain = { version = "0.1.0", optional = true }  # uncomment when cyphera-keychain is published

[dev-dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
