[package]
name = "cyphera-aes"
description = "AES-256-GCM general encryption engine for Cyphera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
