[package]
name = "cyphera-ff1"
description = "FF1 Format-Preserving Encryption (NIST SP 800-38G)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes = { workspace = true }
ctr = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
cyphera-alphabet = { path = "../cyphera-alphabet" }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
