[package]
name = "cyphera-hash"
description = "Keyed hashing (HMAC-SHA256) for Cyphera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
