[package]
name = "cyphera-policy"
description = "Policy file loading and resolution for Cyphera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
cyphera-alphabet = { path = "../cyphera-alphabet" }
